# triage_cli

./: .env.example  .gitignore  README.md  TRIAL_MESSAGE.md  install.sh  langchain_output.json  langchain_readme.md  old_output.json  pyproject.toml  run.sh  run_langchain.sh  run_tests.sh  run_to_json.sh  test.json  triage-menu.sh  triage_output.json
data/: sample_messages.json  sample_messages.jsonl
docs/: langchain_readme.md
output/ai/: langchain_output.json
output/normal/: triage_output.json
scripts/: _ui.sh  run_langchain.sh  run_tests.sh  run_to_json.sh
src/ai_message_triage_trial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/langchain/: index.py
src/triage/: __init__.py  core.py  drafting.py  evaluate.py  extraction.py  models.py  runner.py
src/triage_langchain/: __init__.py  __main__.py  io.py  schemas.py  workflow.py
tests/: test_drafting.py  test_evaluate.py  test_extraction.py  test_runner_cli.py  test_triage.py  test_triage_langchain_io.py  test_triage_langchain_schemas.py  test_triage_langchain_workflow.py
tests/fixtures/: eval_mismatch.json
