[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-message-triage-trial"
version = "0.1.0"
description = "Sanitized paid-trial exercise for AI message triage workflows"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]
langchain = [
    "langchain>=0.3",
    "langchain-google-genai",
    "pydantic>=2",
    "python-dotenv>=1",
    "rich>=13",
    "pyfiglet>=1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]